Fixed: gap in modalContentRenderCompanyTextBox was increased from 10 to 20

--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -143,7 +143,7 @@
   }
   .modalContentRenderCompanyTextBox {
     padding-right: 0px;
-    gap: 10px;
+    gap: 20px;
   }
 }
 
